Sugati/src/objects/Email_Template__c.object
<CustomObject>
    <description>A list of email templates</description>
    <fields>
        <fullName>ET_Condition__c</fullName>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ET_Email_Closing__c</fullName>
        <label>Email Closing</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ET_Email_Intro__c</fullName>
        <label>Email Intro</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ET_Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ET_Page_Section__c</fullName>
        <label>Page/Section Name</label>
        <picklist>
            <picklistValues>
                <fullName>Acknowledgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Suggestions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SupplierPayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int Flight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuck-Tuck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dom Flights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excursion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Aircraft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet &amp; Greet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Jet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Road Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Speed Boat Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Transfer with Excursion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea Plane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Road Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Speed Boat Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Transfer with Excursion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Meet And Greet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SupplierPaymentsNew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ET_Template_Name__c</fullName>
        <label>Template Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Holiday_Suggestion_Email_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Head__c</fullName>
        <label>Email Head</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Address_Filter__c</fullName>
        <label>To Address Filter</label>
        <picklist>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ET_Template_Name__c</columns>
        <columns>ET_User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ET_Page_Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Description_Text</fullName>
        <columns>NAME</columns>
        <columns>ET_Template_Name__c</columns>
        <columns>ET_User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ET_Page_Section__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Email_Template__c.Print_Template</value>
        </filters>
        <label>Description Text</label>
    </listViews>
    <listViews>
        <fullName>Email_Template</fullName>
        <columns>NAME</columns>
        <columns>ET_Template_Name__c</columns>
        <columns>ET_User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ET_Page_Section__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Email_Template__c.Email</value>
        </filters>
        <label>Email Template</label>
    </listViews>
    <nameField>
        <displayFormat>HSET-{0000000000}</displayFormat>
        <label>Holiday Suggestion Email Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Templates</pluralLabel>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <description>Is this for Email Templates?</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Template</fullName>
        <active>true</active>
        <description>Is this the Print Template?</description>
        <label>Print Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>